--- a/config/config.yml
+++ b/config/config.yml
@@ -16,7 +16,7 @@ services:
 
 postgres:
   uri: "host=b24-db user=postgres password=2yZnWGfq8G dbname=postgres port=5432 sslmode=disable"
-  uri_local: "host=localhost user= password= dbname=postgres port=5432 sslmode=disable"
+  uri_local: "host=localhost user=andreymelkov password=Voklem_1891 dbname=postgres port=5432 sslmode=disable"
 
 grpc:
   organization:
@@ -42,7 +42,7 @@ domain:
 
 mail:
   auth:
-    user: ""
+    user: "andrey.melkov@gmail.com"
     password: "idxdruewomrzzbix"
-    host: "smtp.mail.com"
+    host: "smtp.gmail.com"
     port: "587"
